--- a/Example/AGNavigationBar/ChangeAlphaViewController.xib
+++ b/Example/AGNavigationBar/ChangeAlphaViewController.xib
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ThirdViewController" customModule="AGNavigationBar_Example" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ChangeAlphaViewController" customModule="AGNavigationBar_Example" customModuleProvider="target">
             <connections>
                 <outlet property="tableView" destination="WKP-31-YG6" id="TTe-U7-C9s"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
